# pytest_api

./: README.md  pyproject.toml
app/: unitario.py
tests/: test_unitario.py
