[tool.poetry]
name = "pytest-api"
version = "0.1.0"
description = ""
authors = ["Rafael Moreira <rafaelmoreiracvo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.2"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
